# char80

./: .gitignore  Makefile.am  NEWS  README  THANKS  config.h  configure.ac
src/: Makefile.am  char80  main.c
