bin_PROGRAMS = char80
char80_SOURCES = main.c
AM_CFLAGS = -flto -Wshadow -Wconversion -pedantic-errors -Wstrict-prototypes \
	    -Wold-style-definition -Werror -Wall -Wextra -Wpedantic -m32 \
	    -Os -fdata-sections -ffunction-sections -Wl,--gc-sections -g
# -march=native -Ofast -g -std=c17
# -Wshadow -Wconversion -pedantic-errors -Wstrict-prototypes
#  -Wold-style-definition -Werror -Wall -Wextra -Wpedantic
